--- a/estilos.css
+++ b/estilos.css
@@ -111,7 +111,7 @@ footer p {
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
 }
 
-/* Imagen */
+/* Imagenes de las herramientas */
 .producto img {
   width: 100%;
   height: 160px;
@@ -164,7 +164,7 @@ footer p {
 /* Cada categoría */
 .categoria {
   flex: 0 0 auto;
-  width: 280px;
+  width: 350px;
   background-color: white;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
